--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,14 +27,53 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
-
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/material.css">
+    <link rel="stylesheet" href="/styles/material.min.css">
     <!--STYLES END-->
+<script src="/js/material.js"></script>
+    <script src="/js/material.min.js"></script>
   </head>
 
   <body>
-    <%- body %>
+  <!-- Always shows a header, even in smaller screens. -->
+	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+	  <header class="mdl-layout__header">
+	    <div class="mdl-layout__header-row">
+	      <!-- Title -->
+	      <span class="mdl-layout-title">Tabela de Estatística Automatizada</span>
+	      <!-- Add spacer, to align navigation to the right -->
+	      <div class="mdl-layout-spacer"></div>
+	      <!-- Navigation. We hide it in small screens. -->
+	      <nav class="mdl-navigation mdl-layout--large-screen-only">
+	        <a class="mdl-navigation__link" href="/tabela">Tabelas</a>
+	        <a class="mdl-navigation__link" href="">Relatório</a>
+	        <a class="mdl-navigation__link" href="">Sobre</a>
+	      </nav>
+	    </div>
+	  </header>
+	  <div class="mdl-layout__drawer">
+	    <span class="mdl-layout-title">Menu</span>
+	    <nav class="mdl-navigation">
+	      <a class="mdl-navigation__link" href="/tabela">Tabelas</a>
+	      <a class="mdl-navigation__link" href="">Relatório</a>
+	      <a class="mdl-navigation__link" href="">Sobre</a>
+	    </nav>
+	  </div>
+	  <main class="mdl-layout__content">
+	    <div class="page-content">
+	    <%- body %><!-- Your content goes here -->
+	    </div>
+	  </main>
+	  <footer class="mdl-mini-footer">
+		  <div class="mdl-mini-footer__right-section">
+		  	<img src="/images/unipar.png" width="100px">
+		  	<img src="/images/sistemas.png" width="50px">
+		  	<div class="mdl-logo">Unipar - Sistemas de Informação 4° Ano - 2017</div>
+		  </div>
+		</footer>
+	</div>
 
 
 
@@ -89,6 +128,8 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/material.js"></script>
+    <script src="/js/material.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
