cadastro de tabelas

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,7 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/material.css">
@@ -66,13 +67,7 @@
 	    <%- body %><!-- Your content goes here -->
 	    </div>
 	  </main>
-	  <footer class="mdl-mini-footer">
-		  <div class="mdl-mini-footer__right-section">
-		  	<img src="/images/unipar.png" width="100px">
-		  	<img src="/images/sistemas.png" width="50px">
-		  	<div class="mdl-logo">Unipar - Sistemas de Informação 4° Ano - 2017</div>
-		  </div>
-		</footer>
+	  
 	</div>
 
 
