--- a/views/relatorio/tabela.ejs
+++ b/views/relatorio/tabela.ejs
@@ -2,7 +2,7 @@
   <div class="docs-text-styling component-title">
     <table width="60%">
       <tr>
-        <td><h3>Tabela: <%=tabela.nome%> - Relatório</h3></td>
+        <td colspan="2"><h3>Tabela: <%=tabela.nome%></h3></td>
       </tr>
       <tr>
         <td>
