--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,7 @@
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
 	        <a class="mdl-navigation__link" href="/tabela">Tabelas</a>
-	        <a class="mdl-navigation__link" href="">Sobre</a>
+	        <a class="mdl-navigation__link" href="/sobre">Sobre</a>
 	      </nav>
 	    </div>
 	  </header>
@@ -57,7 +57,7 @@
 	    <span class="mdl-layout-title">Menu</span>
 	    <nav class="mdl-navigation">
 	      <a class="mdl-navigation__link" href="/tabela">Tabelas</a>
-	      <a class="mdl-navigation__link" href="">Sobre</a>
+	      <a class="mdl-navigation__link" href="/sobre">Sobre</a>
 	    </nav>
 	  </div>
 	  <main class="mdl-layout__content">
